--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="pages-1">
+            <div class="socialIconsmain">
                 <div class="socialicons">
                     <img src="/Assests/logos_whatsapp-icon.png" alt="">
                     <img src="/Assests/facebookicon.png" alt="">
